--- a/templates/index.html
+++ b/templates/index.html
@@ -105,6 +105,7 @@
                         let temp_html = ``
                         //완료 여부에 따라
                         if (done == 0) {
+                            //애당초 처음 만들 때, num을 넣어둠.
                             temp_html = `<li>
                                         <h2>✅ ${bucket}</h2>
                                         <button onclick="done_bucket(${num})" type="button" class="btn btn-outline-primary">완료!</button>
@@ -145,9 +146,10 @@
             $.ajax({
                 type: "POST",
                 url: "/bucket/done",
-                data: {sameple_give: '데이터전송'},
+                data: {num_give: num},
                 success: function (response) {
                     alert(response["msg"])
+                    window.location.reload()
                 }
             });
         }
